k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartcity
  labels:
    app.kubernetes.io/name: smart-air-quality-monitoring
